--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1074,7 +1074,7 @@ header nav .form input[type="search"] {
     height: 200px;
 }
 .contact .content form .main-input:focus {
-    outline: none;
+    outline: 1px solid var(--main-color);
 }
 .contact .content form input[type="submit"] {
     padding: 20px;
@@ -1089,5 +1089,26 @@ header nav .form input[type="search"] {
 }
 .contact .content form input[type="submit"]:hover {
     background-color: #11abd6;
+}
+.contact .info {
+    flex-basis: 25%;
+}
+.contact .info h4 {
+    text-transform: uppercase;
+    border-bottom: 2px solid var(--main-color);
+    width: fit-content;
+    margin-bottom: 25px;
+}
+.contact .info .phone {
+    display: block;
+    margin-block: 10px;
+    color: var(--p-color);
+}
+.contact .info h4:nth-of-type(2) {
+    margin-top: 70px;
+}
+.contact .info address {
+    line-height: 1.7;
+    color: var(--p-color);
 }
 /* End Contact */
