--- a/css/kasper.css
+++ b/css/kasper.css
@@ -1060,6 +1060,11 @@ header nav .form input[type="search"] {
     display: flex;
     justify-content: space-between;
 }
+@media (max-width: 767px) {
+    .contact .content {
+        flex-direction: column;
+    }
+}
 .contact .content form {
     flex-basis: 70%;
 }
@@ -1069,6 +1074,19 @@ header nav .form input[type="search"] {
     margin-bottom: 30px;
     display: block;
     border: 1px solid #ccc;
+}
+.contact .content form .placeholder {
+    position: relative;
+    top: -70px;
+    left: 20px;
+    color: #777;
+    transition: 0.4s;
+}
+.contact .content form .has-data {
+    top: -115px;
+    left: 0;
+    color: var(--main-color);
+    font-weight: bold;
 }
 .contact .content form textarea.main-input {
     height: 200px;
@@ -1090,8 +1108,21 @@ header nav .form input[type="search"] {
 .contact .content form input[type="submit"]:hover {
     background-color: #11abd6;
 }
+@media (max-width: 767px) {
+    .contact .content form input[type="submit"] {
+        margin: 0 auto;
+    }
+}
 .contact .info {
     flex-basis: 25%;
+}
+@media (max-width: 767px) {
+    .contact .info {
+        order: -1;
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 25px;
+    }
 }
 .contact .info h4 {
     text-transform: uppercase;
@@ -1104,11 +1135,90 @@ header nav .form input[type="search"] {
     margin-block: 10px;
     color: var(--p-color);
 }
-.contact .info h4:nth-of-type(2) {
+.contact .info div:nth-of-type(2) h4 {
     margin-top: 70px;
 }
+@media (max-width: 767px) {
+    .contact .info div:nth-of-type(2) h4 {
+        margin: 0 0 15px 0;
+    }
+}
+
 .contact .info address {
     line-height: 1.7;
     color: var(--p-color);
 }
+@media (max-width: 767px) {
+    .contact .info address {
+        line-height: 1.5;
+    }
+}
 /* End Contact */
+
+/* Footer */
+footer {
+    padding-block: calc(var(--section-padding) / 2);
+    position: relative;
+    background: url(/images/footer.jpg);
+    background-size: cover;
+    /* background-attachment: fixed;*/
+}
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000060;
+}
+footer .container {
+    position: relative;
+    color: var(--white);
+    text-align: center;
+}
+footer img {
+    margin-bottom: 25px;
+}
+footer p:not(.copyrights) {
+    font-size: 22px;
+    border-bottom: 1px solid var(--white);
+    width: fit-content;
+    padding: 20px;
+    margin: 15px auto;
+    text-transform: uppercase;
+}
+footer .social-icons {
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+footer .social-icons a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+footer .social-icons i {
+    font-size: 18px;
+    transition: 0.2s;
+}
+footer .social-icons a:first-of-type i:hover {
+    color: var(--main-color);
+}
+footer .social-icons a:nth-of-type(2) i:hover {
+    color: #dc143c;
+}
+footer .social-icons a:nth-of-type(3) i:hover {
+    color: var(--main-color);
+}
+footer .social-icons a:last-of-type i:hover {
+    color: #3280c6;
+}
+footer .copyrights {
+    margin-top: 45px;
+}
+footer .copyrights span {
+    font-weight: bold;
+    color: var(--main-color);
+}
+/* End Footer */
